<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.setting.SettingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/setting" />
    </LinearLayout>

    <Button
        android:id="@+id/toTtsSpeedBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ttsSpeed" />

    <Button
        android:id="@+id/toUsageBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usage" />

    <Button
        android:id="@+id/toInquiryBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inquiry" />

    <Button
        android:id="@+id/settingToMainBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toMain" />
</LinearLayout>