<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.guide.DestinationSelectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="50sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:text="@string/destinationSelectTitle" />
    </LinearLayout>


    <EditText
        android:id="@+id/inputDestinationEditTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:inputType="text"/>

    <Button
        android:id="@+id/findDestinationBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/findDestination" />

    <Button
        android:id="@+id/selectDestinationBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectDestination" />

    <Button
        android:id="@+id/nextDestinationBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nextDestinationBT" />

    <Button
        android:id="@+id/selectDestToMainBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toMain" />
</LinearLayout>