<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.setting.TTSSettingActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="50sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/ttsSpeed" />
    </LinearLayout>

    <Button
        android:id="@+id/testTTSBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkTTSSpeed" />

    <Button
        android:id="@+id/saveTTSBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveTTSSpeed" />

    <Button
        android:id="@+id/ttsSpeedToMainBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toMain" />

</LinearLayout>