<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.bluetooth.BluetoothConnectActivity"
    android:background="@color/black">

    <Button
        android:id="@+id/searchBTDeviceBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchBTDevice" />

    <Button
        android:id="@+id/btDeviceYesBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes" />

    <Button
        android:id="@+id/btDeviceNoBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no" />
</LinearLayout>